# MCP-Guardian

./: .gitignore  Dockerfile  LICENSE.md  PRD.md  README.md  config.yml  config.yml.example  entrypoint.sh  mcp_guardian.db  pyproject.toml
mcp_guardian/: __init__.py
mcp_guardian/app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py  security.py
mcp_guardian/app/routers/: admin_api.py  admin_ui.py  proxy.py
mcp_guardian/app/scheduler/: check_scheduler.py  route_poller.py
mcp_guardian/app/services/: canonicalize.py  diff.py  proxy_client.py  route_registry.py  snapshotter.py
mcp_guardian/app/static/admin/: admin.css  admin.js
mcp_guardian/app/templates/admin/: index.html  snapshots.html
