[project]
name = "mcp-guardian"
version = "0.1.0"
description = "FastAPI-based MCP proxy with capability validation and auto-disable"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "aiosqlite>=0.19.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "httpx-sse>=0.4.0",
    "sse-starlette>=2.0.0",
    "jcs>=0.2.1",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_guardian"]
