[project]
name = "mcp-guardian"
version = "0.1.0"
description = "FastAPI-based MCP proxy with capability validation and auto-disable"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.120.2",
    "uvicorn[standard]==0.38.0",
    "sqlalchemy==2.0.44",
    "aiosqlite==0.21.0",
    "pydantic==2.12.3",
    "pydantic-settings==2.11.0",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "sse-starlette==3.0.2",
    "jcs==0.2.1",
    "jinja2==3.1.6",
    "python-multipart==0.0.20",
    "pyyaml==6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_guardian"]
